Fix receipt and report routes in swagger
